[package]
name = "megalodon"
version = "0.13.9"
edition = "2021"
authors = ["Akira Fukushima <h3.poteto@gmail.com>"]
description = "Mastodon and Pleroma API client library for Rust."
license = "MIT"
repository = "https://github.com/h3poteto/megalodon-rs"
homepage = "https://github.com/h3poteto/megalodon-rs"

[package.metadata.docs.rs]
features = ["native-tls", "rustls-tls"]

[features]
default = ["rustls-tls"]
native-tls = [
    "tokio-tungstenite/native-tls",
    "reqwest/native-tls",
    "oauth2/native-tls",
]
rustls-tls = [
    "tokio-tungstenite/rustls-tls-native-roots",
    "reqwest/rustls-tls",
    "oauth2/rustls-tls",
]

[dependencies]

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
